--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.1",
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -18,7 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+   
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,3 +44,5 @@
     ]
   }
 }
+
+//"start": "react-scripts start",
